--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "i18next": "^21.8.10",
     "i18next-fs-backend": "^1.1.4",
     "i18next-http-middleware": "^3.2.1",
+    "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.5",
     "sequelize": "^6.20.1",
     "sqlite3": "^5.0.8",
