--- a/api/package.json
+++ b/api/package.json
@@ -67,6 +67,10 @@
       "jest-watch-typeahead/filename",
       "jest-watch-typeahead/testname"
     ],
+    "testPathIgnorePatterns":[
+      "<rootDir>/node_modules/",
+      "<rootDir>/config"
+    ],
     "verbose": true
   }
 }
