--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:dev": "cross-env NODE_ENV=development npm run migrate && cross-env NODE_ENV=development nodemon index",
     "start": "cross-env NODE_ENV=production npm run migrate && cross-env NODE_ENV=production node index",
-    "test": "cross-env NODE_ENV=test jest --watch && cross-env NODE_ENV=test npm run clean-up",
+    "test": "cross-env NODE_ENV=test jest --watch --runInBand --detectOpenHandles  && cross-env NODE_ENV=test npm run clean-up",
     "test:staging": "cross-env NODE_ENV=staging npm run migrate && cross-env NODE_ENV=staging jest -f . --runInBand --forceExit && cross-env NODE_ENV=staging npm run clean-up",
     "clean-up": "node test-cleanup",
     "lint": "eslint .",
