beforeEach in a seperate module

--- a/api/package.json
+++ b/api/package.json
@@ -81,7 +81,9 @@
       "<rootDir>/node_modules/",
       "<rootDir>/config"
     ],
-    "testSequencer":"<rootDir>/test-sequencer.js",
+    "setupFilesAfterEnv":[
+      "<rootDir>/test-setup.js"
+    ],
     "verbose": true
   }
 }
